name:                feldspar-engineering-units
version:             0.1.0.0
synopsis:            A port of the engineering units package to Feldspar
-- description:
license:             BSD3
license-file:        LICENSE
author:              Josef Svenningsson
maintainer:          josefs@chalmers.se
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Feldspar.EngineeringUnits
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
		       feldspar-language, engineering-units
  -- hs-source-dirs:
  default-language:    Haskell2010
